--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
+tungstenite = { version = "0.20.1", features = ["native-tls"] }
 ureq = { version = "2.8.0", features = ["json"] }
+url = "2.4.1"
